--- a/openApiDocs/v1.0/Reports.yml
+++ b/openApiDocs/v1.0/Reports.yml
@@ -7112,7 +7112,7 @@ components:
               description: ID of the user that initiated the sign-in.  Supports $filter (eq).
             userPrincipalName:
               type: string
-              description: 'User principal name of the user that initiated the sign-in.  Supports $filter (eq, startsWith).'
+              description: 'User principal name of the user that initiated the sign-in. This value is always in lowercase. For guest users whose values in the user object typically contain #EXT# before the domain part, this property stores the value in both lowercase and the ''true'' format. For example, while the user object stores AdeleVance_fabrikam.com#EXT#@contoso.com, the sign-in logs store adelevance@fabrikam.com. Supports $filter (eq, startsWith).'
               nullable: true
           additionalProperties:
             type: object
