Added network access Open Api tags to modules mapping file and generated Open Api yml file

--- a/config/ModulesMapping.jsonc
+++ b/config/ModulesMapping.jsonc
@@ -27,6 +27,7 @@
   "Identity.Partner": "^tenantRelationships.delegatedAdminRelationship$|^tenantRelationships.delegatedAdminCustomer$",
   "Mail": "^users.inferenceClassification$|^users.mailFolder$|^users.message$",
   "ManagedTenants": "^tenantRelationships.managedTenant$",
+  "NetworkAccess": "^networkAccess\\.",
   "Notes": "^users.onenote$|^groups.onenote$|^sites.onenote$",
   "People": "^users.person$|^users.profile$|^users.officeGraphInsights$|^users.userAnalytics$",
   "PersonalContacts": "^users.contactFolder$|^users.contact$",
